--- a/index.html
+++ b/index.html
@@ -65,15 +65,20 @@
   }
   .tutorial-header{
     display:flex; align-items:center; justify-content:space-between;
-    padding: 10px 12px; cursor: pointer; user-select: none;
-    background: linear-gradient(180deg, var(--accent-2), var(--accent-1));
+    padding: 12px 12px; cursor: pointer; user-select: none;
+    background: linear-gradient(180deg, color-mix(in oklab, var(--accent-2), #000 10%), color-mix(in oklab, var(--accent-1), #000 10%));
     color: #fff;
   }
-  .tutorial-title { margin: 0; font-size: 18px; width: 100%; text-align: center; }
+  /* Título más legible */
+  .tutorial-title {
+    margin: 0; font-size: 22px; width: 100%; text-align: center;
+    font-weight: 800; letter-spacing: .3px;
+    text-shadow: 0 1px 2px rgba(0,0,0,.45);
+  }
   .tutorial-toggle {
-    border: none; background: rgba(255,255,255,.2);
+    border: none; background: rgba(255,255,255,.22);
     padding: 6px 10px; border-radius: 10px; color: #fff; cursor: pointer;
-    font-weight: 600;
+    font-weight: 700; box-shadow: inset 0 0 0 1px rgba(0,0,0,.15);
   }
   .tutorial-body {
     padding: 10px 12px; text-align: left; font-size: 14px; background: var(--card-bg);
@@ -94,10 +99,14 @@
     width: min(92vw, 520px);
     box-shadow: 0 10px 24px rgba(0,0,0,.10);
     padding: 14px 14px 16px;
+    overflow: hidden; /* evita desbordes visuales */
   }
   .start-input{
     width: 100%;
-    font-size: 13px;
+    max-width: 100%;
+    box-sizing: border-box; /* clave para que no sobresalga */
+    display: block;
+    font-size: 16px;
     padding: 12px 14px;
     border: 2px solid color-mix(in oklab, var(--accent-1), #000 0%);
     border-radius: 12px;
@@ -166,7 +175,7 @@
       <!-- TUTORIAL -->
       <div class="tutorial" id="tutorial">
         <div class="tutorial-header" id="tutorialHeader" role="button" tabindex="0" aria-expanded="true" aria-controls="tutorialBody">
-          <h2 class="tutorial-title">¿Cómo se juega?</h2>
+          <h3 class="tutorial-title">¿Cómo se juega?</h3>
           <button class="tutorial-toggle" id="tutorialToggleBtn" type="button">Ocultar</button>
         </div>
         <div class="tutorial-body" id="tutorialBody">
@@ -714,7 +723,7 @@
   const css = getComputedStyle(document.documentElement);
   const grad = (hex) => { const g = ctx.createLinearGradient(0,0,0,canvas.height); g.addColorStop(0,hex); g.addColorStop(1,hex); return g; };
 
-  // (Re)crear gráfico
+  // (Re)crear gráfico — barras más estrechas
   destroyChart();
   if (typeof Chart === 'function') {
     statsChartInstance = new Chart(ctx, {
@@ -722,9 +731,9 @@
       data: {
         labels,
         datasets: [
-          { label: 'Aquí sí',     data: yesData, backgroundColor: grad(css.getPropertyValue('--yes').trim()), borderRadius: 8, stack: 'stack', barPercentage: 0.9, categoryPercentage: 0.5, maxBarThickness: 42 },
-          { label: 'Me da igual', data: mehData, backgroundColor: grad(css.getPropertyValue('--meh').trim()), borderRadius: 8, stack: 'stack', barPercentage: 0.9, categoryPercentage: 0.5, maxBarThickness: 42 },
-          { label: 'Pasando',     data: noData,  backgroundColor: grad(css.getPropertyValue('--no').trim()),  borderRadius: 8, stack: 'stack', barPercentage: 0.9, categoryPercentage: 0.5, maxBarThickness: 42 }
+          { label: 'Aquí sí',     data: yesData, backgroundColor: grad(css.getPropertyValue('--yes').trim()), borderRadius: 8, stack: 'stack', barPercentage: 0.75, categoryPercentage: 0.35, maxBarThickness: 26 },
+          { label: 'Me da igual', data: mehData, backgroundColor: grad(css.getPropertyValue('--meh').trim()), borderRadius: 8, stack: 'stack', barPercentage: 0.75, categoryPercentage: 0.35, maxBarThickness: 26 },
+          { label: 'Pasando',     data: noData,  backgroundColor: grad(css.getPropertyValue('--no').trim()),  borderRadius: 8, stack: 'stack', barPercentage: 0.75, categoryPercentage: 0.35, maxBarThickness: 26 }
         ]
       },
       options: {
@@ -828,4 +837,3 @@
 </script>
 </body>
 </html>
-
