--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ tr:nth-child(even){ background-color: #faf7ff; }
   width: 100%;
   aspect-ratio: 570/755;
   position: relative;
-  max-width: 760px;         /* centrado cómodo */
+  max-width: 660px;         /* centrado cómodo */
   margin-inline: auto;      /* centrado */
 }
 .map-container svg{ width: 100%; height: 100%; display: block; }
@@ -1099,14 +1099,17 @@ async function showStats() {
   // Mostrar área de afinidad
   document.getElementById('affinityArea').style.display = "grid";
 
-  // === MAPA + RANKING de prefecturas (global, AHORA debajo de afinidad) ===
-  const statsHost = document.getElementById('statsMap');
-  statsHost.innerHTML = '<div style="padding:8px; opacity:.8; text-align:center;">Cargando mapa…</div>';
-  let svg = null;
-  try{ svg = await loadJapanSVG(statsHost); }
-  catch(e){ statsHost.innerHTML = `<div style="padding:8px;">No se pudo cargar el mapa: ${e.message}</div>`; }
+// === MAPA + RANKING de prefecturas (global, AHORA debajo de afinidad) ===
+const statsHost = document.getElementById('statsMap');
+statsHost.innerHTML = '<div style="padding:8px; opacity:.8; text-align:center;">Cargando mapa…</div>';
+let svg = null;
+try { 
+  svg = await loadJapanSVG(statsHost); 
+} catch(e){ 
+  statsHost.innerHTML = `<div style="padding:8px;">No se pudo cargar el mapa: ${e.message}</div>`; 
+}
 
- // Contar likes por prefectura (incluye "Sin prefectura")
+// Contar likes por prefectura (incluye "Sin prefectura")
 const prefLikes = new Map(); // code -> {count, names:Set}
 const noPref = { count: 0, names: new Set() };
 
@@ -1144,9 +1147,90 @@ const sorted = Array.from(prefLikes.entries())
   .sort((a,b)=> b[1].count - a[1].count || a[0].localeCompare(b[0]));
 const topCodes = sorted.slice(0, Math.min(8, sorted.length)).map(([code])=>code);
 
-if (svg){
-  paintPrefectures(svg, Array.from(prefLikes.keys()), 'pref-yes');
+// === Pintar mapa con escala de color dinámica ===
+if (svg) {
+  // Calcular máximo de votos
+  let maxCount = 0;
+  for (const obj of prefLikes.values()){
+    if (obj.count > maxCount) maxCount = obj.count;
+  }
+
+  // Leer paleta dinámica del tema actual
+  const styles = getComputedStyle(document.documentElement);
+  const palette = [
+    styles.getPropertyValue("--accent").trim(),
+    styles.getPropertyValue("--main").trim(),
+    styles.getPropertyValue("--sub").trim(),
+    styles.getPropertyValue("--ng").trim()
+  ];
+
+  // Interpolación de colores
+  function interpolateColor(colors, ratio){
+    const steps = colors.length - 1;
+    const scaled = ratio * steps;
+    const idx = Math.floor(scaled);
+    const t = scaled - idx;
+    if (idx >= steps) return colors[steps];
+
+    function toRGB(c){
+      if (c.startsWith("#")){
+        const bigint = parseInt(c.slice(1), 16);
+        const r = (bigint >> 16) & 255;
+        const g = (bigint >> 8) & 255;
+        const b = bigint & 255;
+        return [r,g,b];
+      }
+      return c.match(/\d+/g).map(Number);
+    }
+
+    const [r1,g1,b1] = toRGB(colors[idx]);
+    const [r2,g2,b2] = toRGB(colors[idx+1]);
+    const r = Math.round(r1 + (r2-r1)*t);
+    const g = Math.round(g1 + (g2-g1)*t);
+    const b = Math.round(b1 + (b2-b1)*t);
+    return `rgb(${r},${g},${b})`;
+  }
+
+  // Pintar cada prefectura con color según nº de likes
+  for (const [code, obj] of prefLikes.entries()){
+    const ratio = maxCount > 0 ? obj.count / maxCount : 0;
+    const color = interpolateColor(palette, ratio);
+    const el = svg.getElementById(code);
+    if (el){
+      el.style.fill = color;
+    }
+  }
+
+  // Mantener resaltado de las top
   paintPrefectures(svg, topCodes, 'pref-top');
+
+  // === Añadir leyenda de escala ===
+  const step = maxCount > 0 ? Math.ceil(maxCount / (palette.length - 1)) : 1;
+  const legend = document.createElement("div");
+  legend.style.display = "flex";
+  legend.style.alignItems = "center";
+  legend.style.justifyContent = "center";
+  legend.style.gap = "8px";
+  legend.style.marginTop = "8px";
+
+  palette.forEach((col, i) => {
+    const box = document.createElement("div");
+    box.style.width = "32px";
+    box.style.height = "16px";
+    box.style.background = col;
+    box.style.border = "1px solid #444";
+    const label = document.createElement("div");
+    label.style.fontSize = "12px";
+    label.style.textAlign = "center";
+    label.textContent = `${i * step}`;
+    const wrapper = document.createElement("div");
+    wrapper.style.textAlign = "center";
+    wrapper.appendChild(box);
+    wrapper.appendChild(label);
+    legend.appendChild(wrapper);
+  });
+
+  statsHost.appendChild(legend);
 }
 
 // Mostrar fila de "Sin prefectura" en la tabla (si existe) --> ARRIBA
@@ -1203,4 +1287,5 @@ document.getElementById("start-screen").style.display = "flex";
 </script>
 </body>
 </html>
+
 
